--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Title of the document</title>
+    <link href="css/main.css" />
   </head>
 
   <body>
@@ -10,3 +11,5 @@
   </body>
 
 </html>
+
+
