--- a/web/index.html
+++ b/web/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <title>Title of the document</title>
-    <link href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
-
   <body>
-  YO!  Content of the document......
+    <div id="marquee">
+      <div id="the-the" >The</div>
+      <div id="headline">Art for Ebola Project</div>
+      <div id="tagline">Buy art, save lives.</div>
+    </div>
+    <div id="action-panel">
+      <div class="big-cta" id="shop-button">Shop (coming soon)</div>
+      <div class="big-cta" id="learn-button">Learn</div>
+    </div>
   </body>
-
 </html>
 
 
